# designspace-nextgen

./: LICENSE.txt  README.rst  pyproject.toml
designspace_nextgen/: __init__.py
tests/: test_designspace_nextgen.py  test_rules.py
