[tool.poetry]
name = "designspace-nextgen"
version = "0.1.0"
description = "Experimental fontTools.designspaceLib reimplementation."
authors = ["Nikolaus Waxweiler <madigens@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fonttools = "^4.27"
attrs = "^21.2.0"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "^6.2"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
